change favicon and fix spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -14,18 +14,17 @@
   transform: translate(-50%, -50%);
   background-color: rgb(173, 216, 230, .75);
   border-radius: 25px;
+  text-align: center;
+  padding-right: 35px
 }
 
 .weather-icon {
-  margin: 0;
-  position: relative;
   width: 50px;
   height: 50px;
-  padding: 8px 30px 8px 30px;
+  padding: 8px 25px 8px 25px;
 }
 
 .list-style li {
-  text-align: center;
   list-style-type: none;
   float: left;
 }
